# FFmpeg-Android

./: .gitignore  .gitmodules  README.md
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/libs/: ffmpeg.aar
android/app/src/androidTest/java/org/voiddog/ffmpeg/test/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/voiddog/ffmpeg/test/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/test/java/org/voiddog/ffmpeg/test/: ExampleUnitTest.java
android/ffmpeg/: CMakeLists.txt  build.gradle
android/ffmpeg/src/androidTest/java/org/voiddog/ffmpeg/: ExampleInstrumentedTest.java
android/ffmpeg/src/main/: AndroidManifest.xml
android/ffmpeg/src/main/cpp/: cmdutils.c  cmdutils.h  config.h  ffmpeg-lib.c  ffmpeg.c  ffmpeg.h  ffmpeg_lib.c  ffmpeg_opt.c  ffmpeg_thread.c  ffmpeg_thread.h
android/ffmpeg/src/main/cpp/libavutil/: ffversion.h
android/ffmpeg/src/main/java/org/voiddog/ffmpeg/: FFmpegNativeBridge.java
android/ffmpeg/src/test/java/org/voiddog/ffmpeg/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
